# Valera

./: .gitignore  Cargo.toml  README.md  TODO.txt  docs.md  flake.nix  run.sh  rustfmt.toml
examples/get_klines/: Cargo.toml
src/: lib.rs  main.rs
tests/: Cargo.toml  main-trades-log.parquet
tests/src/: main.rs
valera/: Cargo.toml  README.md
valera-core/: Cargo.toml
valera-core/src/: lib.rs
valera-macros/: Cargo.toml  README.md
valera-macros/src/: lib.rs
valera-requests/: Cargo.toml
valera-requests/src/: lib.rs
valera-utils/: Cargo.toml  README.md
valera-utils/src/: lib.rs
valera/src/: lib.rs  prelude.rs  providers.rs
valera/src/binance/: lib.rs
valera/src/display/: lib.rs
valera/src/exchanges/: binance.rs  mod.rs
valera/src/requests/: api.rs  api.rs.bak  binance.rs  client.rs  core.rs  core.rs.bak  db_infrastructure.rs  mod.rs  params.rs  providers.rs  query.rs  schedulers.rs  types.rs
valera/src/types/: Timestamp.rs  klines.rs  market.rs  mod.rs  symbol.rs  timeframe.rs
