[workspace]
members = ["valera", "valera-*", "tests", "examples/*"]
default-members = ["valera", "valera-*"]
# exclude = [] // could be used in case one of the above is empty (most often that will be an example. With this could create crates for them preventively
resolver = "2"

[workspace.dependencies]
polars = { version = "0.35.4", features = ["nightly", "parquet", "lazy", "polars-io", "serde", "serde-lazy", "json", "rows", "streaming"] } # , "performant", "cse" // cost compilation time.
chrono = "^0.4.31"
reqwest = { version = "0.11.22", features = ["json", "socks", "blocking"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.191", features =  ["derive", "serde_derive"] }
serde_json = "1.0.108"
backtrace = "0.3.69"
rodio = "0.17.3"
anyhow = "1.0.75"
plotly = { version = "0.8.4", features = ["kaleido"] }
dashmap = "5.5.3"
rand = "0.8.5"

[profile.dev]
opt-level = 0
# incremental = false

[lints.rust]
unsafe_code = "allow"
unused_imports = "allow"
[lints.clippy]
unused_variables = "allow"
unused_imports = "allow"
type_complexity = "allow"
too_many_arguments = "allow"

