[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
valera = { path = "../valera" }
valera-utils = { path = "../valera-utils" }
tokio = { workspace = true }
serde_json = { workspace = true }
polars = { workspace = true }
plotly = { workspace = true }